fix zero metrics
